Fix mobile dark mode toggle by adding correct ID

--- a/styles/components/header.css
+++ b/styles/components/header.css
@@ -1,23 +1,23 @@
 .header {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    padding-top: 2rem;
-    padding-bottom: 2rem;
-    border: 1px solid red;
-    position: relative;
-    z-index: 9999;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+  /* border: 1px solid red; */
+  position: relative;
+  z-index: 9999;
 }
 
 .header__menu {
-    display: none;
+  display: none;
 }
 
 .header__bars {
-    color: var(--clr-light);
-    width: var(--size-2xl);
-    height: var(--size-2xl);
-    display: block;
+  color: var(--clr-light);
+  width: var(--size-2xl);
+  height: var(--size-2xl);
+  display: block;
 }
 /* xs */
 /* @media (min-width: 475px) {
@@ -31,62 +31,62 @@
 
 /* md */
 @media (min-width: 768px) {
-    .header__menu {
-        display: flex;
-        align-items: center;
-        list-style: none;
-        border: 1px solid red;
-        padding: 0;
-        gap: 2rem;
-    }
-    
-    .header__link {
-        font-size: var(--size-xs);
-        text-decoration: none;
-        font-weight: 600;
-        color: var(--clr-slate600);
-        letter-spacing: -0.05em;
-        transition: color 0.3s;
-    }
-    
-    .header__link:hover {
-        color: var(--clr-rose);
-    }
-    
-    .header__line {
-        border: 1px solid var(--clr-slate600);
-    }
-    
-    .header__sun {
-        display: block;
-        color: var(--clr-slate600);
-        width: var(--size-base);
-        height: var(--size-base);
-    }
-    
-    .header__resume {
-        font-size: var(--size-xs);
-    }
+  .header__menu {
+    display: flex;
+    align-items: center;
+    list-style: none;
+    /* border: 1px solid red; */
+    padding: 0;
+    gap: 2rem;
+  }
 
-    .header__bars {
-        display: none;
-    }
+  .header__link {
+    font-size: var(--size-xs);
+    text-decoration: none;
+    font-weight: 600;
+    color: var(--clr-slate600);
+    letter-spacing: -0.05em;
+    transition: color 0.3s;
+  }
+
+  .header__link:hover {
+    color: var(--clr-rose);
+  }
+
+  .header__line {
+    border: 1px solid var(--clr-slate600);
+  }
+
+  .header__sun {
+    display: block;
+    color: var(--clr-slate600);
+    width: var(--size-base);
+    height: var(--size-base);
+  }
+
+  .header__resume {
+    font-size: var(--size-xs);
+  }
+
+  .header__bars {
+    display: none;
+  }
 }
 
 /* lg */
 @media (min-width: 1024px) {
-    .header__link {
-        font-size: var(--size-sm);
-    }
-    
-    .header__sun {
-        width: var(--size-xl);
-        height: var(--size-xl);
-    }
-    
-    .header__resume {
-        font-size: var(--size-sm);
-    }
+  .header__link {
+    font-size: var(--size-sm);
+  }
+
+  .header__sun {
+    width: var(--size-xl);
+    height: var(--size-xl);
+  }
+
+  .header__resume {
+    font-size: var(--size-sm);
+  }
 }
 
 /* xl */
